--- a/public/index.html
+++ b/public/index.html
@@ -22,10 +22,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <script
-    src="https://kit.fontawesome.com/b1c2a0df1f.js"
-    crossorigin="anonymous"
-  ></script>
+    <script src="https://kit.fontawesome.com/b1c2a0df1f.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Baloo+Paaji+2:wght@800&display=swap" rel="stylesheet">
+
     <title>HealthSpan</title>
   </head>
   <body>
@@ -41,5 +40,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAO_SAgxTqtuX3zhkiRahi-ynpM9NqbS1g&callback=initMap"></script>
   </body>
 </html>
